syntax = "proto3";

package scatter.node.proto;

option go_package = "node/message/proto";


message Head{
    int32 MsgType = 1; // 消息类型
    int32 Sequence = 2;// 请求时由客户端填充 , 回复时由服务器设置相同序列 
    string Service = 3;// 服务名称 如 Game.Foo
    string CustomError = 4; // 自定义错误描述 货币不足等逻辑错误
    bytes Payload = 5;// 数据
}

message MsgHandShake{
    string Platform = 1;
    string ClientVersion = 2;
    string BuildVersion = 3;
}

message MsgError{
    string errorInfo = 1;
}